--- a/views/addBook.ejs
+++ b/views/addBook.ejs
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="row">
             <div class="col"></div>
-            <div class=" col bg-light p-3" style="border: 1px;">
+            <div class=" col bg-light my-3 p-4 shadow" style="border: 1px;">
                 <form action="/book/added" method="post" enctype="multipart/form-data">
                     <div class="my-2">
                         <label for="form-label">Add book image</label>
